# wasm-tests

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  build-all.sh  build-rust-test.sh  build-test.sh  build-wat.sh  build.sh  linker_emcc.sh  wasm-install.sh
compiled/: abi.wasm  alloc.wasm  call.wasm  call_code.wasm  call_gasleft.wasm  call_static.wasm  caller.wasm  creator.wasm  dispersion.wasm  empty.wasm  events.wasm  externs.wasm  gasleft.wasm  identity.wasm  keccak.wasm  logger.wasm  math.wasm  mem.wasm  memcmp.wasm  realloc.wasm  recursive.wasm  rterr.wasm  setter.wasm  sha3.wasm  static.wasm  storage_read.wasm  suicidal.wasm
json/: bytes.json  calls.json  externs.json  keccak.json  math.json
src/: abi.rs  alloc.rs  call.rs  call_code.rs  call_gasleft.rs  call_static.rs  caller.rs  creator.rs  dispersion.rs  empty.rs  events.rs  externs.rs  gasleft.rs  helpers.rs  identity.rs  keccak.rs  logger.rs  math.rs  mem.rs  memcmp.rs  realloc.rs  recursive.wat  rterr.rs  setter.rs  sha3.rs  static.rs  storage_read.rs  suicidal.rs
