[package]
name = "wasm-tests"
version = "0.1.0"
authors = ["NikVolf <nikvolf@gmail.com>"]

[dependencies]
pwasm-std = { git = "https://github.com/nikvolf/pwasm-std" }
pwasm-abi = { git = "https://github.com/nikvolf/pwasm-abi" }
pwasm-abi-derive = { git = "https://github.com/nikvolf/pwasm-abi", path = "derive" }

[[bin]]
name = "call_code"
path = "src/call_code.rs"

[[bin]]
name = "call_static"
path = "src/call_static.rs"

[[bin]]
name = "creator"
path = "src/creator.rs"

[[bin]]
name = "dispersion"
path = "src/dispersion.rs"

[[bin]]
name = "empty"
path = "src/empty.rs"

[[bin]]
name = "externs"
path = "src/externs.rs"

[[bin]]
name = "identity"
path = "src/identity.rs"

[[bin]]
name = "logger"
path = "src/logger.rs"

[[bin]]
name = "math"
path = "src/math.rs"

[[bin]]
name = "realloc"
path = "src/realloc.rs"

[[bin]]
name = "rterr"
path = "src/rterr.rs"

[[bin]]
name = "keccak"
path = "src/keccak.rs"

[[bin]]
name = "suicidal"
path = "src/suicidal.rs"

[[bin]]
name = "storage_read"
path = "src/storage_read.rs"

[[bin]]
name = "abi"
path = "src/abi.rs"

[profile.release]
panic = "abort"
